--- a/scss/components/_colors.scss
+++ b/scss/components/_colors.scss
@@ -33,7 +33,7 @@ $wpfr-body-bg: #1f2833;
 
 // TEXT COLORS
 .color-p {
-    color:$color !important;
+    color:$color-primary !important;
 }
 .color-pl {
     color:$color-primary-light !important;
