--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,3 +1,14 @@
 /*--------------------------------------------------------------
 # ALL USE ROUTES COMPONENTS --- WisePanda.fr 
 --------------------------------------------------------------*/
+
+@forward "../components/fonts";
+@forward "../components/colors";
+@forward "../components/mixins";
+@forward "../components/buttons";
+@forward "../components/animations";
+@forward "../components/general";
+@forward "../components/section";
+@forward "../components/navbar";
+@forward "../components/preloader";
+@forward "../custom";
