--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,5 +2,6 @@
 # INDEX STYLINGS --- WisePanda.fr 
 --------------------------------------------------------------*/
 
-@use "./custom.scss"
+@use "./custom.scss";
+@use "./sections/header"
 
