--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -1,3 +1,31 @@
 /*--------------------------------------------------------------
 # SECTION & SECTION-HEARDER COMPONENTS --- WisePanda.fr 
 --------------------------------------------------------------*/
+
+@use "./colors" as c;
+
+section {
+    padding: 60px 0;
+    overflow: hidden;
+}
+
+.section-header{
+    text-align: center;
+    padding-bottom: 40px;
+    text-transform: uppercase;
+    h2{
+        font-style: 3rem;
+        font-weight: 300;
+        color:c.$color-default;
+    }
+    p{
+        margin: 0 auto;
+        color: c.$color-secondary-light;
+    }
+}
+
+@media (min-width:1280px){
+    p{
+        max-width: 80%;
+    }
+}
