--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -10,6 +10,7 @@
 // All buttons call-to-action
 
 .btn {
+    // --contact for header
     &--contact, &--contact:focus{
         font-size: 1rem;
         color: c.$color-default;
@@ -23,5 +24,46 @@
     &--contact:hover, &--contact:focus:hover{
         color: c.$color-default;
         background: rgba(c.$color-primary, 0.85)
+    }
+
+    //--hero-contact for hero-banner animated
+    &--hero-contact{
+        font-size: 1rem;
+        font-weight:400;
+        display:inline-block;
+        padding:10px 28px;
+        border-radius: 4px;
+        transition: 0.5s;
+        color:c.$color-default;
+        background: c.$color-primary;
+        font-family: f.$font-default;
+        text-transform: uppercase;
+        &:hover{
+            background: rgba(c.$color-primary, 0.85);
+            color: c.$color-default;
+        }
+    }
+
+    //--watch-video for hero-banner animated
+    &--watch-video{
+        font-size: 1rem;
+       margin-left: 25px;
+       font-weight: 600;
+        transition: 0.5s;
+        color:c.$color-secondary-light;
+        font-family: f.$font-default;
+        text-transform: uppercase;
+        i{
+            transition: 0.3s;
+            color:c.$color-primary;
+            line-height: 0;
+            margin-right: 8px;
+        }
+        &:hover{
+            color: c.$color-primary;
+            i{
+                color: rgba(c.$color-primary, 0.8)
+            }
+        }
     }
 }
