add about section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,5 +5,6 @@
 @use "./custom.scss";
 @use "./sections/header";
 @use "./sections/onepage/hero-banner";
-@use "./sections/onepage/featured-services"
+@use "./sections/onepage/featured-services";
+@use "./sections/onepage/about";
 
