--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11598,6 +11598,78 @@ section {
 }
 
 /*--------------------------------------------------------------
+# ABOUT-US SECTION --- WisePanda.fr 
+--------------------------------------------------------------*/
+.about__img {
+  position: relative;
+  margin: 60px 0 0 60px;
+}
+.about__img::before {
+  content: "";
+  position: absolute;
+  inset: -60px 0 0 -60px;
+  z-index: -1;
+  background: url("../img/about/about-bg.png") top left;
+  background-repeat: no-repeat;
+}
+.about h3 {
+  color: #ffffff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+.about .nav-pills {
+  border-bottom: 1px solid rgba(197, 198, 199, 0.2);
+}
+.about .nav-pills li + li {
+  margin-left: 40px;
+}
+.about .nav-link {
+  background: none;
+  font-size: 1.125rem;
+  font-weight: 400;
+  color: #c5c6c7;
+  padding: 12px 0;
+  margin-bottom: -2px;
+  border-radius: 0;
+  font-family: "Poppins", sans-serif;
+}
+.about .nav-link.active {
+  color: #45a29e;
+  background: none;
+  border-bottom: 3px solid #45a29e;
+}
+.about .tab-content h4 {
+  font-size: 1.125rem;
+  margin: 0;
+  font-weight: 700;
+  color: #c5c6c7;
+}
+.about .tab-content i {
+  font-size: 1.375rem;
+  line-height: 0;
+  margin-right: 8px;
+  color: #45a29e;
+}
+
+@media (max-width: 575px) {
+  .about__img {
+    margin: 30px 0 0 30px;
+  }
+  .about__img::before {
+    inset: -30px 0 0 -30px;
+  }
+  .about .nav-link {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 768px) {
+  .about h3 {
+    font: size 1.75rem;
+  }
+}
+/*--------------------------------------------------------------
 # INDEX STYLINGS --- WisePanda.fr 
 --------------------------------------------------------------*/
 
