add clients section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,4 +7,5 @@
 @use "./sections/onepage/hero-banner";
 @use "./sections/onepage/featured-services";
 @use "./sections/onepage/about";
+@use "./sections/onepage/clients";
 
