--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11670,6 +11670,22 @@ section {
   }
 }
 /*--------------------------------------------------------------
+# CLIENTS SECTION --- WisePanda.fr 
+--------------------------------------------------------------*/
+.clients {
+  padding: 0 0 60px 0;
+}
+.clients .swiper-slide {
+  opacity: 0.5;
+  transition: 0.3s;
+  filter: grayscale(100);
+}
+.clients .swiper-slide:hover {
+  filter: none;
+  opacity: 1;
+}
+
+/*--------------------------------------------------------------
 # INDEX STYLINGS --- WisePanda.fr 
 --------------------------------------------------------------*/
 
