--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,4 +8,5 @@
 @use "./sections/onepage/featured-services";
 @use "./sections/onepage/about";
 @use "./sections/onepage/clients";
+@use "./sections/onepage/cta";
 
