--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -5,6 +5,7 @@
 
 @use "./colors" as c;
 @use "./fonts" as f;
+@use "./mixins" as m;
 
 
 // All buttons call-to-action
@@ -84,5 +85,106 @@
             background: c.$color-primary
 
         }
+    }
+
+    //--play & --read-more for onfocus section
+    &--play{
+        width: 94px;
+        height: 94px;
+        background: radial-gradient(c.$color-primary 50%,
+        rgba(c.$color-primary, 0.4) 52%);
+        border-radius: 50%;
+        display: block;
+        position: absolute;
+        left:calc(50% - 47px);
+        top:calc(50% - 47px);
+        overflow: hidden;
+        &::before{
+            content: "";
+            position: absolute;
+            width: 120px;
+            height: 120px;
+            -webkit-animation-delay: 0s;
+            animation-delay: 0s;
+            -webkit-animation: pulsate-btn 2s;
+            animation: pulsate-btn 2s;
+            -webkit-animation-direction: forwards;
+            animation-direction: forwards;
+            -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+            -webkit-animation-timing-function: steps;
+            animation-timing-function: steps;
+            opacity: 1;
+            border-radius: 50%;
+            border: 5px solid rgba(c.$color-primary, 0.7);
+            top:-15%;
+            left: -15%;
+            background: rgba(198, 16 , 0 ,0)
+        }
+        &::after{
+            content: "";
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translateX(-40%) translateY(-50%);
+            width:0;
+            height:0;
+            border-top: 10px solid transparent;
+            border-bottom: 10px solid transparent;
+            border-left: 15px solid c.$color-default;
+            z-index: 100;
+            transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+        }
+        &:hover{
+            &::before{
+                content: "";
+                left: 50%;
+                top: 50%;
+                transform: translateX(-40%) translateY(-50%);
+                width:0;
+                height:0;
+                border:none;
+                border-top: 10px solid transparent;
+                border-bottom: 10px solid transparent;
+                border-left: 15px solid c.$color-default;
+                
+                z-index: 200;
+                -webkit-animation: none;
+                animation: none;
+                border-radius: 0;
+            }
+            &::after{
+                border-left: 15px solid c.$color-primary;
+                transform: scale(20);
+            }
+        }
+        
+    }
+
+    &--read-more{
+        color: c.$color-default;
+        font-family: f.$font-secondary;
+        font-weight: 500;
+        font-size: 1rem;
+        letter-spacing: 1px;
+        padding: 12px 24px;
+        transition: 0.3s;
+       @include m.inflexCenterCenter;
+       background: c.$color-primary;
+       i{
+        font-size: 1.125rem;
+        margin-left: 5px;
+        line-height: 0;
+        transition: 0.3s;
+       }
+       &:hover{
+        background: rgba(c.$color-primary, 0.9);
+        color:c.$color-default;
+        padding-right: 19px;
+        i{
+            margin-left: 10px;
+        }
+       }
+     
     }
 }
