--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,4 +9,5 @@
 @use "./sections/onepage/about";
 @use "./sections/onepage/clients";
 @use "./sections/onepage/cta";
+@use "./sections/onepage/onfocus";
 
