--- a/scss/components/_animations.scss
+++ b/scss/components/_animations.scss
@@ -19,3 +19,27 @@
     }
     100%{transform: translateY(-10px);}
 }
+
+// onfocus section pulsate btn animation
+
+@-webkit-keyframes pulsate-btn {
+    0%{
+        transform: scale(0.6, 0.6);
+        opacity: 1;
+    }
+    100%{
+        transform: scale(1, 1);
+        opacity: 0;
+    }
+}
+
+@keyframes pulsate-btn {
+    0%{
+        transform: scale(0.6, 0.6);
+        opacity: 1;
+    }
+    100%{
+        transform: scale(1, 1);
+        opacity: 0;
+    }
+}
